--- a/src/pages/ggservers.astro
+++ b/src/pages/ggservers.astro
@@ -153,7 +153,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="The perfect combination of gaming and functionality"
             imglink="/img/streamline/logo.svg"
-            link="streamline"
+            link="/streamline"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
         />
@@ -162,7 +162,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="A website designed to shock and awe"
             imglink="/img/shockhosting/logo.png"
-            link="shockhosting"
+            link="/shockhosting"
             services="WEB DESIGN / CODING"
             type="Hosting Provider"
         />
