--- a/src/pages/hosthavoc.astro
+++ b/src/pages/hosthavoc.astro
@@ -144,7 +144,7 @@ import WorkPreview from '../components/work-preview.astro';
 				<WorkPreview
 					title="A realism design for a real cool company"
 					imglink="/img/jaxnap/logo.png"
-					link="jaxnap"
+					link="/jaxnap"
 					services="WEB DESIGN / CODING"
 					type="Datacenter"
 				/>
@@ -153,7 +153,7 @@ import WorkPreview from '../components/work-preview.astro';
 				<WorkPreview
 					title="Seamless Notarization. Anytime, Anywhere."
 					imglink="/img/pronotary/logo.svg"
-					link="pronotary"
+					link="/pronotary"
 					services="WEB DESIGN / CODING"
 					type="Software Company"
 				/>
