--- a/src/pages/hostmantis.astro
+++ b/src/pages/hostmantis.astro
@@ -169,7 +169,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="Designed for speed, because of course it is"
                 imglink="/img/speedy/logo.png"
-                link="speedypage"
+                link="/speedypage"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
             />
@@ -178,7 +178,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="A realism design for a real cool company"
                 imglink="/img/jaxnap/logo.png"
-                link="jaxnap"
+                link="/jaxnap"
                 services="WEB DESIGN / CODING"
                 type="Datacenter"
             />
