--- a/src/pages/jaxnap.astro
+++ b/src/pages/jaxnap.astro
@@ -176,7 +176,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="If the mantis don't getcha, the design will"
                 imglink="/img/mantis/logo.png"
-                link="hostmantis"
+                link="/hostmantis"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
             />
@@ -185,7 +185,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="Wrecking Havoc with this website design"
                 imglink="/img/hosthavoc/logo.svg"
-                link="hosthavoc"
+                link="/hosthavoc"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
             />
