--- a/src/pages/moonqube.astro
+++ b/src/pages/moonqube.astro
@@ -166,7 +166,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="Seamless Notarization. Anytime, Anywhere."
             imglink="/img/pronotary/logo.svg"
-            link="pronotary"
+            link="/pronotary"
             services="WEB DESIGN / CODING"
             type="Software Company"
         />
@@ -175,7 +175,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="The perfect combination of gaming and functionality"
             imglink="/img/streamline/logo.svg"
-            link="streamline"
+            link="/streamline"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
         />
