--- a/src/pages/oasis.astro
+++ b/src/pages/oasis.astro
@@ -133,7 +133,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="A website designed to shock and awe"
                 imglink="/img/shockhosting/logo.png"
-                link="shockhosting"
+                link="/shockhosting"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
             />
@@ -142,7 +142,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="Designed for speed, because of course it is"
                 imglink="/img/speedy/logo.png"
-                link="speedypage"
+                link="/speedypage"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
             />
