--- a/src/pages/pronotary.astro
+++ b/src/pages/pronotary.astro
@@ -134,7 +134,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="Wrecking Havoc with this website design"
             imglink="/img/hosthavoc/logo.svg"
-            link="hosthavoc"
+            link="/hosthavoc"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
         />
@@ -143,7 +143,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="Affordable cloud hosting to the moooon"
             imglink="/img/moonqube/logo.svg"
-            link="moonqube"
+            link="/moonqube"
             services="WEB DESIGN / CODING / DEV"
             type="Cloud Provider"
         />
