--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -8,7 +8,7 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="main-intro">
         <div class="container">
             <h1>Services</h1>
-            <p>The services available at Varcoe. Every project is different so if you need some work done, <a href="contact">contact me</a> for a quote!</p>
+            <p>The services available at Varcoe. Every project is different so if you need some work done, <a href="/contact">contact me</a> for a quote!</p>
         </div>
     </section>
     
@@ -38,7 +38,7 @@ import WorkPreview from '../components/work-preview.astro';
                         <li>Each page will be designed in photoshop, with you approving all pages.</li>
                         <li>Revisions will follow after each update, as many times as it takes to get it right. </li>
                     </ul>
-                    <a href="contact" class="textlink">Order Web Design</a>
+                    <a href="/contact" class="textlink">Order Web Design</a>
                 </div>
             </div>
             <div class="service-group">
@@ -66,7 +66,7 @@ import WorkPreview from '../components/work-preview.astro';
                         <li>Manually tested on over 10 of today's most popular mobile devices.</li>
                         <li>Your website in mobile will be the same as desktop, with only minor changes.</li>
                     </ul>
-                    <a href="contact" class="textlink">Go Responsive</a>
+                    <a href="/contact" class="textlink">Go Responsive</a>
                 </div>
             </div>
             <div class="service-group">
@@ -93,7 +93,7 @@ import WorkPreview from '../components/work-preview.astro';
                         <li>We will match your website to your brand/products.</li>
                         <li>eCommerce software is really easy to use, we'll even show you how to use it.</li>
                     </ul>
-                    <a href="contact" class="textlink">Create a Shop</a>
+                    <a href="/contact" class="textlink">Create a Shop</a>
                 </div>
             </div>
             <div class="service-group">
@@ -120,7 +120,7 @@ import WorkPreview from '../components/work-preview.astro';
                         <li>Your integration will function just like the original script, but in your websites design.</li>
                         <li>We can include a script integration in a web design or coding package.</li>
                     </ul>
-                    <a href="contact" class="textlink">Inquire Now</a>
+                    <a href="/contact" class="textlink">Inquire Now</a>
                 </div>
             </div>
         </div>
