--- a/src/pages/shockhosting.astro
+++ b/src/pages/shockhosting.astro
@@ -171,7 +171,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="The foundation for a GG Minecraft provider"
                 imglink="/img/ggserver/logo.png"
-                link="ggservers"
+                link="/ggservers"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
             />
@@ -180,7 +180,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="An oasis of design for a game server provider"
                 imglink="/img/oasis/logo.png"
-                link="oasis"
+                link="/oasis"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
             />
