--- a/src/pages/speedypage.astro
+++ b/src/pages/speedypage.astro
@@ -167,7 +167,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="An oasis of design for a game server provider"
                 imglink="/img/oasis/logo.png"
-                link="oasis"
+                link="/oasis"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
             />
@@ -176,7 +176,7 @@ import WorkPreview from '../components/work-preview.astro';
             <WorkPreview
                 title="If the mantis don't getcha, the design will"
                 imglink="/img/mantis/logo.png"
-                link="hostmantis"
+                link="/hostmantis"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
             />
