--- a/src/pages/streamline.astro
+++ b/src/pages/streamline.astro
@@ -134,7 +134,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="Affordable cloud hosting to the moooon"
             imglink="/img/moonqube/logo.svg"
-            link="moonqube"
+            link="/moonqube"
             services="WEB DESIGN / CODING / DEV"
             type="Cloud Provider"
         />
@@ -143,7 +143,7 @@ import WorkPreview from '../components/work-preview.astro';
         <WorkPreview
             title="The foundation for a GG Minecraft provider"
             imglink="/img/ggserver/logo.png"
-            link="ggservers"
+            link="/ggservers"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
         />
