--- a/src/pages/hosthavoc.astro
+++ b/src/pages/hosthavoc.astro
@@ -23,7 +23,7 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="casestudy-main-left">
                 <h1>HostHavoc</h1>
                 <h2>A leading Game Server Provider</h2>
-                <p>Having done their website in the past they reached out to me looking for a more modernized version of their existing website. They sell mostly game servers but also dedicated & virtual servers, along with web hosting. They wanted to keep an emphasis on gaming and that's what I did. </p>
+                <p>Having done their website in the past they reached out to me looking for a more modernized version of their existing website. They sell mostly game servers but also dedicated & virtual servers, along with web hosting. Overall, super happy with how this turned out. </p>
                 <a href="http://hosthavoc.com" class="button" target="_blank">Visit Website</a>
             </div>
             <div class="casestudy-main-right">
